# projetvelib

./: .gitignore  QUICKSTART.md  README.md  config.py  main.py  mypy.ini  pyproject.toml  requirements.txt
assets/: custom.css
data/: station_information.csv  velib_data.db
data/cleaned/: velib_merged_data.csv
data/raw/: station_statut.csv
src/components/: footer.py  header.py  navbar.py
src/pages/: about.py  analysis.py  home.py  insights.py  insights_callbacks.py  map_page.py
src/utils/: clean_data.py  common_functions.py  database.py  get_data.py
tests/: __init__.py  test_common_functions.py  test_data_validation.py  test_pages_integration.py
